<resources>
    <string name="app_name">FirstClass</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome</string>
    <string name="do_you_have_account">do_you_have_account</string>
    <string name="sign_in">sign_in</string>
    <string name="let_s_go">let_s_go</string>
    <string name="login">login</string>
    <string name="invalid">invalid</string>
    <string name="invalid_UserName_Password">invalid_UserName_Password</string>
</resources>
