<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SplashActivity">

<TextView
    android:id="@+id/UserNameLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="22dp"
    android:text="@string/username"
    app:layout_constraintTop_toBottomOf="@id/person"
   app:layout_constraintLeft_toLeftOf="parent"
    />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/person"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/UserNameLabel"
        />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/UserNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/UserNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/PasswordLabel"
        />
    <ImageView
        android:id="@+id/person"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/PasswordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>